--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -20,6 +20,9 @@ logback = "1.4.14"
 sqldelight = "2.0.1"
 koin = "3.5.3"
 koin-compose = "1.1.2"
+hikari-cp = "5.1.0"
+sqllite-jdbc = "3.45.0.0"
+jdbi = "3.43.0"
 
 [libraries]
 kotlin-test = { module = "org.jetbrains.kotlin:kotlin-test", version.ref = "kotlin" }
@@ -47,6 +50,12 @@ sqldelight-sqlite = { module = "app.cash.sqldelight:sqlite-driver", version.ref 
 # Koin
 koin-core = { module = "io.insert-koin:koin-core", version.ref = "koin" }
 koin-compose = { module = "io.insert-koin:koin-compose", version.ref = "koin-compose" }
+# Hikari Cp (Dekstop Only)
+hikaricp = { module = "com.zaxxer:HikariCP", version.ref = "hikari-cp"}
+sqlite-jdbc-driver = { module = "org.xerial:sqlite-jdbc", version.ref = "sqllite-jdbc"}
+# JDBI (Dekstop Only)
+jdbi-core = { module = "org.jdbi:jdbi3-core", version.ref = "jdbi" }
+jdbi-kotlin = { module = "org.jdbi:jdbi3-kotlin", version.ref = "jdbi" }
 
 [plugins]
 androidApplication = { id = "com.android.application", version.ref = "agp" }
